--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phase2"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Sean Bowe <ewillbefull@gmail.com>"]
 description = "Library for performing MPCs for creating zk-SNARK public parameters"
 documentation = "https://docs.rs/phase2"
@@ -21,5 +21,5 @@ git = "https://github.com/filecoin-project/bellman"
 branch = "master"
 
 [dependencies.pairing]
-git = "https://github.com/zkcrypto/pairing"
+git = "https://github.com/filecoin-project/pairing"
 branch = "master"
