--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ num_cpus = "1"
 crossbeam = "0.7"
 ff = "0.4.0"
 blake2b_simd = "0.4.1"
-bellperson = "0.2"
+bellperson = "0.3"
 paired = "0.15"
 
-[package.metadata.release]
-pre-release-commit-message = "chore(release): release {{version}}"
-pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
+[features]
+default = []
+gpu = ["bellperson/gpu"]
