refactor: upgrade to edition 2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ documentation = "https://docs.rs/phase21"
 homepage = "https://github.com/filecoin-project/phase2"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/filecoin-project/phase2"
+edition = "2018"
 
 [dependencies]
 rand = "0.7"
