--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ num_cpus = "1"
 crossbeam = "0.7"
 ff = "0.5.0"
 blake2b_simd = "0.5.8"
-bellperson = "0.4"
+bellperson = "0.5.2"
 paired = "0.16"
 groupy = "0.2.0"
 rand_chacha = "0.2.1"
+rayon = "1.2.1"
 
 [features]
 default = []
