--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,14 @@ rand = "0.7"
 byteorder = "1"
 num_cpus = "1"
 crossbeam = "0.7"
-ff = "0.5.0"
+ff = { version = "0.2.1", package = "fff" }
 blake2b_simd = "0.5.8"
-bellperson = "0.5.2"
-paired = "0.16"
-groupy = "0.2.0"
+bellperson = "0.6.2"
+paired = "0.18.0"
+groupy = "0.3.0"
 rand_chacha = "0.2.1"
 rayon = "1.2.1"
+log = "0.4.7"
 
 [features]
 default = []
