feat: add subgroup checks when deserializing small params

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ crossbeam = "0.7"
 ff = { version = "0.2.1", package = "fff" }
 blake2b_simd = "0.5.8"
 bellperson = "0.9.0"
-paired = "0.20.0"
+# paired = "0.20.0"
+paired = { git = "https://github.com/filecoin-project/pairing", branch = "g1-read-raw-check" }
 groupy = "0.3.0"
 rand_chacha = "0.2.1"
 rayon = "1.2.1"
