--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "phase2"
-version = "0.2.2"
+version = "0.3.0"
+edition = "2021"
 authors = ["Sean Bowe <ewillbefull@gmail.com>"]
 description = "Library for performing MPCs for creating zk-SNARK public parameters"
 documentation = "https://docs.rs/phase2"
@@ -9,9 +10,13 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/ebfull/phase2"
 
 [dependencies]
-pairing = "0.14"
-rand = "0.4"
-bellman = "0.1"
+pairing = "0.23.0"
+rand = "0.8.5"
+bellman = "0.14.0"
+bls12_381 = "0.8.0"
+ff = { version = "0.13" }
+group = "0.13.0"
+rand_chacha = "0.3.1"
 byteorder = "1"
 num_cpus = "1"
 crossbeam = "0.3"
